--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # External gems
 # See http://ixti.net/software/2013/01/28/using-jekyll-plugins-on-github-pages.html for making `jekyll archives` work.
 gems:
+  - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
   - jekyll-paginate
 
@@ -8,17 +9,17 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Statistics and Data Science Portfolio
-subtitle: "A site to showcase different Statistical Analyses and Data Science Projects"
-email: lhewa001@umn.edu
-name: Yeshi Lhewa
+title: Centrarium
+subtitle: "A simple yet classy theme for your Jekyll website or blog"
+email: blcentra@gmail.com
+name: Ben Centra
 description: >
   A simple yet classy theme for your Jekyll website or blog.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "/centrarium" # the subpath of your site, e.g. /blog/
-url: "http://yesman89.github.io" # the base hostname & protocol for your site
+url: "http://bencentra.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
